Alignment fixed

--- a/style.css
+++ b/style.css
@@ -6,9 +6,20 @@ body {
 
 .btn {
     width: 100%;
-    margin: 0px 5px;
+    padding: 5px;
 }
 
-.row {
-    margin-bottom: 5px;
+.col-sm-1 {
+    margin: 0px;
+    padding: 0.15rem;
+}
+
+.col-sm-2 {
+    margin: 0px;
+    padding: 0.15rem;
+}
+
+.col-sm-12 {
+    margin: 0px;
+    padding: 0.15rem;
 }
